Update Editor.java